<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DutyReporting</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_logged_in">Welcome!</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="statistics">Stats</string>
    <string name="manual_entry">Manual Entry</string>
    <string name="title_activity_manual_entry">ManualEntryActivity</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="day_label">Day</string>
    <string name="month_label">Month</string>
    <string name="year_label">Year</string>
    <string name="pick_date">Choose a date:</string>
    <string name="pick_hour">Hours Worked:</string>
    <string name="save">SAVE</string>
    <string-array name="spinnerDay">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="spinnerMonth">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="spinnerYear">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
    </string-array>
</resources>
