<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context="com.example.swords.dutyreporting.LoggedInActivity">

    <Button
        android:layout_width="100pt"
        android:layout_height="30pt"
        android:text="@string/check_in"
        android:textSize="18pt"
        android:textColor="#FFFFFF"
        android:background="#FF0000"
        android:id="@+id/check_in_button"
        android:layout_marginTop="51dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="onCheckInButtonClick"/>

    <Button
        android:layout_width="100pt"
        android:layout_height="30pt"
        android:text="@string/check_out"
        android:textSize="18pt"
        android:textColor="#FFFFFF"
        android:background="#FF0000"
        android:id="@+id/check_out_button"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/check_in_button"
        android:layout_alignStart="@+id/check_in_button"
        android:onClick="onCheckOutButtonClick"/>

    <Button
        android:layout_width="300px"
        android:layout_height="wrap_content"
        android:text="@string/shifts"
        android:textColor="#FFFFFF"
        android:background="#FF0000"
        android:id="@+id/shifts_button"
        android:layout_marginBottom="54dp"
        android:onClick="onShiftsButtonClick"
        android:longClickable="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="300px"
        android:layout_height="wrap_content"
        android:text="@string/manual_entry"
        android:textColor="#FFFFFF"
        android:background="#FF0000"
        android:id="@+id/Forgot_button"
        android:onClick="onManualEntryButtonClick"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/shifts_button"
        android:layout_alignLeft="@+id/check_out_button"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="300px"
        android:layout_height="wrap_content"
        android:text="STATS"
        android:textColor="#FFFFFF"
        android:background="#FF0000"
        android:id="@+id/averages_button"
        android:onClick="onStatsButtonClick"
        android:layout_alignTop="@+id/Forgot_button"
        android:layout_alignStart="@+id/shifts_button" />

    <Button
        android:layout_width="300px"
        android:layout_height="wrap_content"
        android:text="User Graphs"
        android:textColor="#FFFFFF"
        android:background="#FF0000"
        android:id="@+id/graphs_button"
        android:onClick="onGraphsButtonClick"
        android:longClickable="false"
        android:layout_marginRight="60dp"
        android:layout_below="@+id/Forgot_button"
        android:layout_alignLeft="@+id/Forgot_button"
        android:layout_alignStart="@+id/Forgot_button" />

</RelativeLayout>
